[package]
name = "baseline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs3 = { path = "../bs3" }

digest = "0.10.2"
async-trait = "0.1.52"

baseline-macros = { path = "../macros" }

# for RPC.
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }

[features]
default = ["json"]
json = ["serde", "serde_json"]
