[package]
name = "bs3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs3 = { git = "https://github.com/tiannian/bs3.git" }
digest = "0.10.2"

# For vsdb and sha3
vsdb = { version = "0.14", optional = true }

[features]
default = ["vsdb-backend"]

vsdb-backend = ["vsdb"]

