[package]
name = "baseline-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baseline = { path = "../baseline" }

async-trait = "0.1.52"
futures-utils-lite = "0.1.0"

# smol backend
smol = { version = "1.2.5", optional = true }

[features]
default = ["smol_backend"]
smol_backend = ["smol"]


