[package]
name = "baseline-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baseline = { path = "../baseline" }
bs3 = { path = "../bs3" }

async-trait = "0.1.52"
futures-utils-lite = "0.1.0"

sha3 = { version = "0.10", optional = true }

# smol backend
smol = { version = "1.2.5", optional = true }

[features]
default = ["smol-backend", "vsdb-backend", "sha3-backend"]

# Async backend
smol-backend = ["smol"]

# storage backend
vsdb-backend = ["bs3/vsdb-backend"]

# hash backend
sha3-backend = ["sha3"]

