[package]
name = "baseline-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baseline = { path = "../../baseline", version = "0.1.0" }

log = "0.4"

async-trait = "0.1.52"
futures-utils-lite = "0.1.0"

sha3 = { version = "0.10", optional = true }

# smol backend
smol = { version = "1.2.5", optional = true }

bs3vsdb = { version = "0.1", path = "../../bs3/bs3vsdb", optional = true }

[features]
default = ["smol-backend", "vsdb-backend", "sha3-backend"]

# Async backend
smol-backend = ["smol"]

# storage backend
vsdb-backend = ["bs3vsdb"]

# hash backend
sha3-backend = ["sha3"]

